all photo update

--- a/sections/article-template.liquid
+++ b/sections/article-template.liquid
@@ -1,6 +1,6 @@
 <section class="overflow-hidden" >
   <div class="sigle-blog-hero">
-      <img src="{{ article.image | img_url: ''  }}g" alt="">
+      <img src="{{ article.image | img_url: ''  }}" class="lazyload"  alt="">
   </div>
 </section>
 <!-- --------sigle-content-section----- -->
