--- a/sections/customenewarrival.liquid
+++ b/sections/customenewarrival.liquid
@@ -47,7 +47,7 @@
                       <pattern id="{{section.id}}-{{forloop.index}}" patternContentUnits="objectBoundingBox" width="1" height="1">
                       <use xlink:href="#image{{section.id}}-{{forloop.index}}" transform="translate(0 -0.064752) scale(0.00227273 0.00183361)"/>
                       </pattern>
-                      <image id="image{{section.id}}-{{forloop.index}}" loading="lazy"  width="440" height="616" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
+                      <image id="image{{section.id}}-{{forloop.index}}" class="lazyload"  loading="lazy"  width="440" height="616" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
                       </defs>
                     </svg>
                     <div class="prudct-shado-svg egg-mobile-respinsive">
@@ -152,7 +152,7 @@
       breakpoints : {
   
         '600': {
-          perPage: 1,
+          perPage: 1.3,
           autoScroll: {
             speed: 0,
           },
