--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1,4 +1,4 @@
-<div class="product-template__container page-width"
+<div class="product-template__container"
   id="ProductSection-{{ section.id }}"
   data-section-id="{{ section.id }}"
   data-section-type="product"
@@ -10,7 +10,23 @@
   
   -%}
 
+  <div class="shop-banner">
+    <div class="container">
+        <div class="shop-breadcrumb">
+            <div class="d-flex align-tems-center">
+                <a>All collections</a>
+                 <div class="breade-comearrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
+                    <path d="M1 1L5 5L1 9" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <a>{{ product.title }}</a>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="proudct-page-wrapper">
+  
 <div class="container">
   <div class="row">
 
