--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -1,6 +1,12 @@
+<div class="loging-wrapper pt-100 pb-180">
+  <div class="container">
+    <div class="row">
+     <div class="col-8 offset-md-2">
+      <div class="card-common-inputclass">
+
 <div class="page-width">
   <div class="grid">
-    <div class="grid__item medium-up--one-half medium-up--push-one-quarter">
+    <div class="">
 
       <div class="form-vertical">
 
@@ -61,7 +67,7 @@
             </span>
           {%- endif -%}
 
-          <p class="text-center">
+          <p class="text-center login-butoon">
             <input type="submit" value="{{ 'customer.register.submit' | t }}" class="btn">
           </p>
 
@@ -69,4 +75,9 @@
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
