--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2983,7 +2983,7 @@ hr {
 
 @media only screen and (max-width: 749px) {
   .template-product .main-content {
-    padding-top: 22px; }
+    }
   .product-single__media-group {
     position: relative; }
   .thumbnails-wrapper {
