--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -1,7 +1,7 @@
 <div class="loging-wrapper pt-100 pb-180">
   <div class="container">
     <div class="row">
-     <div class="col-8 offset-md-2">
+     <div class="col-11 col-md-8 offset-md-2 offset-1">
       <div class="card-common-inputclass">
 
 <div class="page-width">
