proudct page pagination update

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -53,7 +53,7 @@
 
                   {% for image in product.images %}
                     {% comment %} {{ image.src | img_url: '' }} {% endcomment %}
-                  <li class="splide__slide product-page">
+                  <li class="splide__slide">
                     <svg width="79" height="111" viewBox="0 0 79 111" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <rect x="0.5" y="0.5" width="78" height="110" rx="39" fill="url(#pattern{{forloop.index}}-a)" stroke="black"/>
                       <defs>
