--- a/assets/style.css
+++ b/assets/style.css
@@ -1508,27 +1508,31 @@ div#suggeationlist {
     padding: 50px 0;
   }
 }
-.product-slider-wrapper .splide__track .splide__list .splide__slide {
+.product-slider-wrapper .splide__track .splide__list .splide__slide.product-page {
   border: none !important;
 }
 @media (min-width: 250px) {
-  .product-slider-wrapper .splide__track .splide__list .splide__slide svg {
+  .product-slider-wrapper .splide__track .splide__list .splide__slide.product-page svg {
     margin-left: 18px;
     height: 467px;
     width: 334px;
   }
 }
 @media (min-width: 576px) {
-  .product-slider-wrapper .splide__track .splide__list .splide__slide svg {
+  .product-slider-wrapper .splide__track .splide__list .splide__slide.product-page svg {
     margin-left: 18px;
     height: 605px;
     width: 436px;
   }
 }
 @media (min-width: 1400px) {
-  .product-slider-wrapper .splide__track .splide__list .splide__slide svg {
+  .product-slider-wrapper .splide__track .splide__list .splide__slide.product-page svg {
     margin-left: 18px;
   }
+}
+
+.splide__track--nav > .splide__list > .splide__slide.is-active {
+  border: none;
 }
 
 .proudct-wrapper-content {
